2025-01-01 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix entries per second calculation for logging

2024-11-23 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Refactor code to prepare for file system type restrictions
	* move failed JIT compilation log message to DEBUG level

2024-11-10 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Remove deprecated hashsums from H default group (closes: #179)

2024-10-14 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Update aide.conf man page

2024-10-13 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Refactor input database code
	  - use strtok_r instead of flex for tokenizing
	  - support integer and base64 representation for time_t
	* Refactor output database code
	  - save time_t as integer instead of base64 encoded string

2024-09-03 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix parsing of lowercase group names (closes: #176)

2024-07-15 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Switch from libmhash to libnettle (closes: #150, #164)
	  - add 'sha512_256', sha3_256, and 'sha3_512' hashsums
	  - switch hashsum in R default group from md5 to sha3_256
	  - deprecate legacy hashsums (md5, sha1, rmd160, gost)
	  - remove unsupported hashsums (haval, crc32, crc32b, tiger,
	    whirlpool)
	  - add limited support for hashsum transitions
	  - add check_hashsum unit test

2024-07-11 Zopolis4 <creatorsmithmdt@gmail.com>
	* Set autogen.sh and version.sh as executable

2024-07-08 Marc 'Zugschlus' Haber <mh+github@zugschlus.de>
	* Allow version.sh to accept GIT_VERSION from environment

2024-06-16 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add non-recursive negative rules (-<regex>)
	  - change semantic of unrestricted (recursive) negative rules
	  - refactor rule matching code
	  - improve output for --path-check and --dry-run
	  - improve file tree processing when using limit
	* Specify PCRE2 variant in README
	* Fix typo in macro name
	* Clean up #include statements