@@ -772,7 +772,7 @@ see also \fB report_ignore_e2fsattrs \fP option
 (requires \fIlibext2fs\fR, added in AIDE v0.15)
 .TP
 .B "\fBcaps\fR"
-file capabilities
+file capabilities (regular files only)
 (requires \fIlibcap2\fR, added in AIDE v0.17)
 .PP
 
